--- a/idem/index.html
+++ b/idem/index.html
@@ -11,42 +11,52 @@
   <span class="header-heading">header</span>
 </header>
   <main class="container">
+    <div class="changerColumnDirection">
     <div class="wrapper">
       <div class="grey box roboto">Гений непредвзято понимает под собой конфликт.
         Закон внешнего мира, очевидно, реально подчеркивает аксиоматичный здравый смысл.
         Культ джайнизма включает в себя поклонение Махавире и другим тиртханкарам,
         поэтому закон исключённого третьего индуцирует изоморфный ротор.</div>
       <div class="moreno" >
-        <div class="grey boxMini roboto box-first"> <span class="text">Чувство однократно</span> </div>
-        <div class="grey boxMini roboto"><span class="text">Морено</span></div>
+        <div class="grey boxMini roboto box-first"> Чувство однократно </div>
+        <div class="grey boxMini roboto">Морено</div>
       </div>
     </div>
-    <div class="wrapper">
-      <div class="rectangle lightGrey roboto"> <span class="text"></span>Наши сотрудники</div>
-      <div class="rectangle lightGrey roboto"> <span class="text"></span>Просветляет понимающий тест</div>
-      <div class="rectangle blue roboto"> <span class="text"></span>Интроекция</div>
-    </div>
-    <div class="wrapper">
-      <div class="rectangleBig lightGrey roboto"> <span class="text"></span>Конформизм</div>
-      <div class="rectangle yellow roboto"> <span class="text"></span>Наши сотрудники</div>
-    </div>
-    <div class="wrapper">
-      <div>
-        <div class="green boxMini roboto"> <span class="text"></span>Понятие модернизации понимает механизм власти</div>
-        <div class="picture boxMini roboto"> <span class="text"></span>Наши сотрудники</div>
+    <div class="wrapper changerRowToColumn">
+      <div class="rectangleContainer">
+        <div class="rectangleMiniRow">
+          <div class="rectangle lightGrey roboto rectangle-first"> Наши сотрудники</div>
+          <div class="rectangle lightGrey roboto">Просветляет понимающий тест</div>
+        </div>
+        <div class="rectangleBig lightGrey roboto"> Конформизм</div>
       </div>
-      <div class="green box roboto">Фамилия _______________________ Мамай <br> Имя и отчество_____________Станиславаленина
-        Владимировна</div>
+      <div class="rectangleMiniColumn changerColumnToRow">
+        <div class="rectangle blue roboto RowRectangleFirst"> Интроекция</div>
+        <div class="rectangle yellow roboto"> Наши сотрудники</div>
+      </div>
     </div>
-    <div class="wrapper">
-      <div class="orange rectangle roboto"> <span class="text"></span>Лидерство</div>
-      <div class="orange rectangleBig roboto"> <span class="text"></span>Однако</div>
     </div>
-    <div class="wrapper">
-      <div class="red rectangle roboto"> <span class="text"></span>Невероятный гений</div>
-      <div class="orange rectangle roboto"><span class="text"></span>Точка перегиба</div>
-      <div class="purple rectangle roboto"><span class="text"></span>Длина вектора</div>
+    <div class="wrapper hidden">
+      <div class="moreno">
+        <div class="green boxMini roboto box-first">Понятие модернизации понимает механизм власти</div>
+        <div class="picture boxMini roboto">Наши сотрудники</div>
+      </div>
+      <div class="green box roboto">Фамилия _______________________ Мамай <br>
+        Имя и отчество_____________Станиславаленина Владимировна</div>
     </div>
+    <div class="changerRowToColumnReverse">
+        <div class="changerColumnToRow">
+          <div class="orange rectangle roboto RowRectangleFirst"> Лидерство</div>
+          <div class="red rectangle roboto"> Невероятный гений</div>
+        </div>
+        <div class="wrapper rectangleContainer">
+          <div class="orange rectangleBig roboto"> Однако</div>
+          <div class="row">
+            <div class="orange rectangle roboto rectangle-first">Точка перегиба</div>
+            <div class="purple rectangle roboto">Длина вектора</div>
+          </div>
+        </div>
+      </div>
   </main>
   <footer class="footer">
   <span class="footer-heading">footer</span>
