add all margins

--- a/idem/index.html
+++ b/idem/index.html
@@ -22,8 +22,8 @@
         <div class="grey boxMini roboto">Морено</div>
       </div>
     </div>
-    <div class="wrapper changerRowToColumn">
-      <div class="rectangleContainer">
+    <div class="changerRowToColumn wrapper">
+      <div class="rectangleContainer wrapper">
         <div class="rectangleMiniRow">
           <div class="rectangle lightGrey roboto rectangle-first"> Наши сотрудники</div>
           <div class="rectangle lightGrey roboto">Просветляет понимающий тест</div>
@@ -44,14 +44,14 @@
       <div class="green box roboto">Фамилия _______________________ Мамай <br>
         Имя и отчество_____________Станиславаленина Владимировна</div>
     </div>
-    <div class="changerRowToColumnReverse">
-        <div class="changerColumnToRow">
+    <div class="changerRowToColumnReverse wrapper">
+        <div class="changerColumnToRow wrapper">
           <div class="orange rectangle roboto RowRectangleFirst"> Лидерство</div>
           <div class="red rectangle roboto"> Невероятный гений</div>
         </div>
-        <div class="wrapper rectangleContainer">
+        <div class="rectangleContainer">
           <div class="orange rectangleBig roboto"> Однако</div>
-          <div class="row">
+          <div class="rectangleMiniRow">
             <div class="orange rectangle roboto rectangle-first">Точка перегиба</div>
             <div class="purple rectangle roboto">Длина вектора</div>
           </div>
