deleted unused classes

--- a/idem/index.html
+++ b/idem/index.html
@@ -4,56 +4,56 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.min.css">
-  <title>Gulp</title>
+  <title>idem</title>
 </head>
 <body>
   <header class="header">
   <span class="header-heading">header</span>
 </header>
   <main class="container">
-    <div class="changerColumnDirection">
+    <div class="column reverse">
     <div class="wrapper">
-      <div class="grey box roboto">Гений непредвзято понимает под собой конфликт.
+      <div class="grey box">Гений непредвзято понимает под собой конфликт.
         Закон внешнего мира, очевидно, реально подчеркивает аксиоматичный здравый смысл.
         Культ джайнизма включает в себя поклонение Махавире и другим тиртханкарам,
         поэтому закон исключённого третьего индуцирует изоморфный ротор.</div>
-      <div class="moreno" >
-        <div class="grey boxMini roboto box-first"> Чувство однократно </div>
-        <div class="grey boxMini roboto">Морено</div>
+      <div class="column">
+        <div class="grey boxMini box-first"> Чувство однократно </div>
+        <div class="grey boxMini">Морено</div>
       </div>
     </div>
     <div class="changerRowToColumn wrapper">
-      <div class="rectangleContainer wrapper">
+      <div class="rectangleContainer">
         <div class="rectangleMiniRow">
-          <div class="rectangle lightGrey roboto rectangle-first"> Наши сотрудники</div>
-          <div class="rectangle lightGrey roboto">Просветляет понимающий тест</div>
+          <div class="rectangle lightGrey"> Наши сотрудники</div>
+          <div class="rectangle lightGrey">Просветляет понимающий тест</div>
         </div>
-        <div class="rectangleBig lightGrey roboto"> Конформизм</div>
+        <div class="rectangleBig lightGrey"> Конформизм</div>
       </div>
       <div class="rectangleMiniColumn changerColumnToRow">
-        <div class="rectangle blue roboto RowRectangleFirst"> Интроекция</div>
-        <div class="rectangle yellow roboto"> Наши сотрудники</div>
+        <div class="rectangle blue"> Интроекция</div>
+        <div class="rectangle yellow"> Наши сотрудники</div>
       </div>
     </div>
     </div>
     <div class="wrapper hidden">
-      <div class="moreno">
-        <div class="green boxMini roboto box-first">Понятие модернизации понимает механизм власти</div>
-        <div class="picture boxMini roboto">Наши сотрудники</div>
+      <div class="column">
+        <div class="green boxMini box-first">Понятие модернизации понимает механизм власти</div>
+        <div class="picture boxMini">Наши сотрудники</div>
       </div>
-      <div class="green box roboto">Фамилия _______________________ Мамай <br>
+      <div class="green box">Фамилия _______________________ Мамай <br>
         Имя и отчество_____________Станиславаленина Владимировна</div>
     </div>
     <div class="changerRowToColumnReverse wrapper">
-        <div class="changerColumnToRow wrapper">
-          <div class="orange rectangle roboto RowRectangleFirst"> Лидерство</div>
-          <div class="red rectangle roboto"> Невероятный гений</div>
+        <div class="changerColumnToRow">
+          <div class="orange rectangle"> Лидерство</div>
+          <div class="red rectangle"> Невероятный гений</div>
         </div>
         <div class="rectangleContainer">
-          <div class="orange rectangleBig roboto"> Однако</div>
+          <div class="orange rectangleBig"> Однако</div>
           <div class="rectangleMiniRow">
-            <div class="orange rectangle roboto rectangle-first">Точка перегиба</div>
-            <div class="purple rectangle roboto">Длина вектора</div>
+            <div class="orange rectangle">Точка перегиба</div>
+            <div class="purple rectangle">Длина вектора</div>
           </div>
         </div>
       </div>
